# valyu-agentcore

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
architecture/sources/: README.md  agentcore_diagram.py
assets/: README.md
cloudformation/: README.md  valyu-gateway.yaml
examples/: app.py  economics_search.py  paper_search.py  web_search.py
examples/gateway/: README.md  add_valyu_target.py  setup_gateway.py  use_gateway.py  valyu_gateway_config.json
examples/local/: README.md  bio_search.py  finance_search.py  patent_search.py  sec_search.py
examples/notebooks/: getting_started.ipynb
examples/runtime/: .bedrock_agentcore.yaml  README.md  agent.py  requirements.txt
examples/use_cases/: README.md  due_diligence.py  financial_analyst.py  research_assistant.py
iam-policies/: README.md  agentcore-invoke-only-policy.json  agentcore-user-policy.json
valyu_agentcore/: __init__.py  gateway.py  tools.py
